# HyprL

./: .env.broker.alpaca.example  .gitignore  .output.txt  AGENTS.md  AGENT_API.md  CHANGELOG.md  CONTRIBUTING.md  DOC.md  DOC_HYPRL.md  Dockerfile.runtime  LICENSE  README.md  README_repro.md  deploy_aggressive_v2.sh  devto_article.md  docker-compose.yml  hyprl.db  hyprl_v2.db  netlify.toml  pyproject.toml  pytest.ini  qemu.py  requirements.txt  test_hyprl_v2.db
!resumeprojet/: 01_ARCHITECTURE.md  02_MODELS.md  03_FEATURES.md  04_STRATEGY_FILTERS.md  05_RUST_ENGINE.md  06_DEPLOYMENT.md  07_CONFIGS.md  08_RESULTS.md  09_RISK_PREVENTION.md  ALL.md
HyprL-H/: AGENTS.md  PROJECT_BRAIN.md  README.txt  SUMMARY.md  V2_API.md
api/: __init__.py  app.py  auth.py  autorank_manager.py  db.py  models.py  rate_limiter_service.py  ratelimit.py  ratelimit_redis.py  repo.py  schemas.py  session_manager.py  settings.py
artifacts/: prob_model_nvda_1h_v1.pkl  xgb_prob_amd_1h_v1.pkl  xgb_prob_amd_1h_v2.pkl  xgb_prob_meta_1h_v1.pkl  xgb_prob_meta_1h_v2.pkl  xgb_prob_msft_1h_v1.pkl  xgb_prob_msft_1h_v2.pkl  xgb_prob_nvda_1h_v1.pkl  xgb_prob_nvda_1h_v2.pkl  xgb_prob_qqq_1h_v1.pkl  xgb_prob_qqq_1h_v2.pkl  xgb_prob_spy_1h_v1.pkl  xgb_prob_spy_1h_v2.pkl
bot/: __init__.py  config.py  hyprl_client.py  main.py  session_store.py
catboost_info/: learn_error.tsv  time_left.tsv
configs/: AAPL-1h.yaml  AMD-1h.yaml  AMD-1h_v2.yaml  AMD-1h_v2_twap.yaml  META-1h.yaml  META-1h_no_mtf.yaml  META-1h_v2.yaml  MSFT-15m_v3.yaml  MSFT-1h.yaml  MSFT-1h_v2.yaml  MSFT-1h_v3.yaml  MSFT-1h_v4.yaml  NVDA-15m_v3.yaml  NVDA-1h.yaml  NVDA-1h_no_mtf.yaml  NVDA-1h_v2.yaml  NVDA-1h_v2_caps_loose.yaml  NVDA-1h_v2_twap.yaml  NVDA-1h_v3.yaml  NVDA-1h_v3_debug.yaml  NVDA-1h_v4.yaml  QQQ-15m_v3.yaml  QQQ-1h.yaml  QQQ-1h_v2.yaml  QQQ-1h_v3.yaml  QQQ-1h_v4.yaml  SPY-1h.yaml  SPY-1h_v2.yaml  example.yaml  portfolio_ascendant_v1.yaml  portfolio_ascendant_v2.yaml  portfolio_core_15m_v3.yaml  portfolio_core_1h_v3.yaml  portfolio_v4_production.yaml  supersearch_presets.yaml
core_bridge/: __init__.py  rt_runner.py  service.py
deploy/: .env.api  .env.api.example  .env.bot  .env.bot.example  .env.portal  .env.portal.example  Caddyfile.docker  Caddyfile.example  Caddyfile.prod  Dockerfile.api  Dockerfile.bot  Dockerfile.portal  build_and_push_v2.sh  docker-compose.redis.yml  docker-compose.v2.prod.yml  docker-compose.v2.yml  nginx.conf.example  nvda_max_profit.env
docs/: .gitlab-ci.yml  AI_CONTEXT.md  ALPACA_BROKER.md  BILLING_TODO.md  COMPARISON_1H_vs_15M.md  COPILOT_BRIEF.md  COPILOT_INSTRUCTIONS.md  CORE_V3_FREEZE.md  CRYPTO_XGBOOST_PLAN.md  DEPLOY_V2_DOCKER.md  DEPLOY_V2_PROD_DOCKER.md  DISCORD_SERVER_MONETIZATION.md  DNS_SETUP.md  EQUITY_STRATEGY_RESEARCH.md  GO_LIVE_CHECKLIST.md  HYPRL_COMPLETE_REFERENCE.md  HYPRL_PROJECT_DOCUMENT.md  LANDING_PAGE.md  MARKETING_AUTOMATION_PLAN.md  MT5_DATA_WORKFLOW.md  MT5_INTEGRATION_PLAN.md  MULTI_TIMEFRAME_STRATEGY.md  ONBOARDING_BETA.md  OPS.md  OPS_FINAL_BRIDGE_FIXES.md  PERFORMANCE_REPORT.md  PITCH.md  PLAN_COMPLETION_HYPRL.md  PRICING.md  PRODUCT_V0.md  PROJECT_SUMMARY.md  RELEASE_NOTES_V0R1.md  RESUME_FOR_IDE.md  RUNBOOK.md  RUST_ENGINE.md  SENSE_FULL_SPEC.md  (+19 more)
native/hyprl_supercalc/: Cargo.toml
native/hyprl_supercalc/src/: backtest.rs  batch.rs  core.rs  data.rs  ffi.rs  indicators.rs  lib.rs  metrics.rs  multi.rs
native/hyprl_supercalc/src/backtest/: mod.rs
native/hyprl_supercalc/src/indicators/: mod.rs
(+692 files in other folders)
