[project]
name = "hyprl-model"
version = "0.1.0"
description = "Prototype pipeline for price trend estimation combining technical indicators and sentiment."
authors = [
  { name = "HyprL Team" }
]
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "yfinance>=0.2.44",
  "pandas-datareader>=0.10.0",
  "ta>=0.11.0",
  "scikit-learn>=1.5",
  "vaderSentiment>=3.3.2",
  "requests>=2.32"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0"
]

[build-system]
requires = ["setuptools>=63"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
