[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyprl"
version = "0.1.0"
description = "Algorithmic trading system with ML-based signal generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "HyprL Team"}
]
keywords = ["trading", "algorithmic-trading", "machine-learning", "xgboost", "quantitative-finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "alpaca-trade-api>=3.0.0",
    "ta>=0.10.0",
    "python-dotenv>=1.0.0",
    "pytz>=2023.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "discord.py>=2.0.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.2.0",
    "xgboost>=1.7.0",
    "joblib>=1.2.0",
    "polars>=0.20.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
rust = [
    "maturin>=1.0.0",
]
all = ["hyprl[ml,dev,rust]"]

[project.urls]
Homepage = "https://github.com/Kacawaiii/HyprL"
Documentation = "https://github.com/Kacawaiii/HyprL#readme"
Repository = "https://github.com/Kacawaiii/HyprL.git"
Issues = "https://github.com/Kacawaiii/HyprL/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
