[package]
name = "hyprl_supercalc"
version = "0.1.0"
edition = "2021"
description = "HyprL native backtest accelerator"

[lib]
name = "hyprl_supercalc"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
ndarray = "0.15"
statrs = "0.16"
polars = { version = "0.42", features = ["lazy", "parquet", "ndarray"] }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
pyo3-polars = "0.16"
